# xray-rust

./: .gitattributes  .gitignore  Cargo.toml  README.md  go.mod  go.sum  skills-lock.json
crates/xray-bench/: Cargo.toml
crates/xray-bench/src/: lib.rs  main.rs
crates/xray-cli/: Cargo.toml
crates/xray-cli/src/: lib.rs  main.rs
crates/xray-cli/tests/: cli_args_tests.rs  process_interop_tests.rs
crates/xray-config/: Cargo.toml
crates/xray-config/src/: diagnostic.rs  geodata.rs  lib.rs  model.rs  parser.rs
crates/xray-config/tests/: model_tests.rs  parser_tests.rs
crates/xray-core-rs/: Cargo.toml
crates/xray-core-rs/src/: debug_log.rs  http.rs  lib.rs  outbound.rs  policy.rs  sniffing.rs  socks.rs  startup_probe.rs  tun.rs  tun_fd.rs
crates/xray-core-rs/tests/: compat_smoke.rs  core_lifecycle_tests.rs  local_xray_interop_tests.rs  runtime_data_path_tests.rs  startup_probe_tests.rs  workspace_smoke.rs
crates/xray-ffi/: Cargo.toml
crates/xray-ffi/include/: module.modulemap  xray_ffi.h
crates/xray-ffi/src/: lib.rs  tun_fd.rs
crates/xray-ffi/tests/: ffi_tests.rs  mobile_artifacts_tests.rs
crates/xray-proxy/: Cargo.toml
crates/xray-proxy/src/: lib.rs
crates/xray-proxy/src/inbound/: http.rs  mod.rs  socks.rs
crates/xray-proxy/src/vless/: mod.rs  response_stream.rs  udp.rs  vision.rs  vision_stream.rs  wire.rs
crates/xray-proxy/tests/: inbound_parser_tests.rs  vision_stream_tests.rs  vision_tests.rs  vless_response_stream_tests.rs  vless_wire_tests.rs
crates/xray-routing/: Cargo.toml
crates/xray-routing/src/: lib.rs
crates/xray-routing/tests/: routing_tests.rs
crates/xray-runtime/: Cargo.toml
crates/xray-runtime/src/: lib.rs
crates/xray-transport/: Cargo.toml
crates/xray-transport/src/: dialer.rs  lib.rs  penetrating_tls.rs  reality.rs  reality_connector.rs  reality_runtime.rs  reality_rustls.rs  reality_utls_profiles.rs  tls.rs
crates/xray-transport/tests/: dns_tests.rs  reality_clienthello_tests.rs  reality_connector_tests.rs  reality_runtime_tests.rs  reality_rustls_tests.rs  reality_tests.rs  shaped_rustls_tests.rs  transport_tests.rs
crates/xray-tun/: Cargo.toml
crates/xray-tun/src/: lib.rs
crates/xray-tun/tests/: tun_tests.rs
crates/xray-utls/: Cargo.toml
crates/xray-utls/src/: lib.rs
docs/: benchmarks.md  mobile-testing.md  shaped-rustls-clienthello-oracle-gap-brief.md  shaped-rustls-utls-fingerprint-agent-brief.md  shaped-rustls-utls-fingerprint-parity-report.md  verification.md  xray-rustls-agent-brief.md
docs/superpowers/plans/: 2026-05-19-mobile-client-core.md  2026-05-20-outbound-dns-resolution.md  2026-05-20-reality-certificate-verifier.md  2026-05-20-reality-live-handshake-foundation.md  2026-05-20-reality-oracle-handshake-foundation.md  2026-05-20-runtime-data-path.md  2026-05-20-runtime-domain-target-hardening.md  2026-05-20-tls-connector.md  2026-05-20-transport-stream-abstraction.md  2026-05-21-local-xray-vless-interop.md  2026-05-21-reality-clienthello-oracle-provider.md  2026-05-21-reality-runtime-boundary.md  2026-05-21-reality-runtime-engine.md  2026-05-21-reality-stateful-provider-boundary.md  2026-05-21-tls-reality-vision-interop.md  2026-05-21-vision-runtime-wrapper.md  2026-05-22-config-compatibility-hardening.md  2026-05-22-ffi-tun-packet-boundary.md  2026-05-22-freedom-outbound.md  2026-05-22-http-inbound-runtime.md  2026-05-22-mobile-build-artifacts.md  2026-05-22-mobile-fd-tun-backend.md  2026-05-22-mobile-ffi-lifecycle.md  2026-05-22-mobile-test-readiness.md  2026-05-22-routing-ip-cidr-config-corpus.md  2026-05-22-runnable-core-binary.md  2026-05-22-tun-flow-runtime.md  2026-05-22-tun-udp-xudp-icmp.md  2026-05-22-xray-core-benchmark-harness.md  2026-06-01-macos-system-vpn-menu-bar.md  2026-06-10-performance-security-fixes.md  2026-06-16-outbound-http-probe.md  2026-06-17-xray-core-config-compatibility.md
docs/superpowers/specs/: 2026-05-19-mobile-client-core-design.md  2026-05-20-outbound-dns-resolution-design.md  2026-05-20-reality-certificate-verifier-design.md  2026-05-20-reality-live-handshake-foundation-design.md  2026-05-20-reality-oracle-handshake-foundation-design.md  2026-05-20-runtime-data-path-design.md  2026-05-20-runtime-domain-target-hardening-design.md  2026-05-20-tls-connector-design.md  2026-05-20-transport-stream-abstraction-design.md  2026-05-21-local-xray-vless-interop-design.md  2026-05-21-reality-clienthello-oracle-provider-design.md  2026-05-21-reality-runtime-boundary-design.md  2026-05-21-reality-runtime-engine-design.md  2026-05-21-reality-stateful-provider-boundary-design.md  2026-05-21-tls-reality-vision-interop-design.md  2026-05-21-vision-runtime-wrapper-design.md  2026-05-22-interim-status-and-roadmap-design.md  2026-05-22-mobile-fd-tun-backend-design.md  2026-05-22-runnable-core-binary-design.md  2026-05-22-tun-flow-runtime-design.md  2026-05-22-tun-udp-xudp-icmp-design.md  2026-05-22-xray-core-benchmark-harness-design.md  2026-06-01-macos-system-vpn-menu-bar-design.md  2026-06-02-mobile-flow-budget-design.md  2026-06-16-outbound-http-probe-design.md
platform/android/: README.md  settings.gradle.kts
platform/android/xraymobile/: build.gradle.kts
platform/android/xraymobile/src/main/cpp/: CMakeLists.txt  xray_mobile_jni.cpp
platform/apple/: Package.swift  README.md
platform/apple/HostApp/: XrayClientApp.swift
platform/apple/Sources/XrayAppleClient/: XrayClientProfileStore.swift  (+10 more)
platform/apple/scripts/: install-macos-debug-app.sh
scripts/: build-android-adapter.sh  build-android-libs.sh  build-apple-adapter.sh  build-apple-xcframework.sh  check-apple-adapter-link.sh  check-mobile-toolchains.sh
tests/compat/: vless_reality_vision.rs
tests/fixtures/configs/: go_vless_reality_vision_server.json  mobile_vless_reality_vision_split_routing.json  vless_reality_vision.json  xray_core_reality_split_routing_full.json
tests/fixtures/reality/: clienthello_chrome_auto.json  clienthello_shape_hellochrome_100.json  session_id_vectors.json
tools/reality-oracle/: clienthello_fixture.go  clienthello_shape.go  generate_utls_profiles.mjs  session_id_vectors.go
(+37 files in other folders)
