[workspace]
members = [
    "crates/xray-config",
    "crates/xray-routing",
    "crates/xray-tun",
    "crates/xray-proxy",
    "crates/xray-transport",
    "crates/xray-runtime",
    "crates/xray-core-rs",
    "crates/xray-ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "local"

[workspace.dependencies]
aes = { version = "0.8", features = ["zeroize"] }
aes-gcm = { version = "0.10", features = ["zeroize"] }
async-trait = "0.1"
bytes = "1"
ghash = { version = "0.5", features = ["zeroize"] }
hkdf = "0.12"
hmac = "0.12"
libc = "0.2"
polyval = { version = "0.6", features = ["zeroize"] }
prost = "0.13"
rand = "0.8"
rcgen = { version = "0.14", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
uuid = { version = "1", features = ["serde", "v4"] }
webpki-roots = "1"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
x509-parser = { version = "0.18", default-features = false }
zeroize = "1"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "unwind"
