[package]
name = "xray-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "xray-bench"
path = "src/main.rs"

[dependencies]
bytes.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
xray-proxy = { path = "../xray-proxy" }
xray-routing = { path = "../xray-routing" }
