[package]
name = "xray-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
xray-utls = { path = "../xray-utls" }
