[package]
name = "xray-core-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
bytes.workspace = true
hkdf.workspace = true
libc.workspace = true
sha2.workspace = true
smoltcp.workspace = true
thiserror.workspace = true
tokio.workspace = true
xray-config = { path = "../xray-config" }
xray-proxy = { path = "../xray-proxy" }
xray-routing = { path = "../xray-routing" }
xray-runtime = { path = "../xray-runtime" }
xray-transport = { path = "../xray-transport" }
xray-tun = { path = "../xray-tun" }

[dev-dependencies]
async-trait.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
uuid.workspace = true
