[package]
name = "xray-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
xray-routing = { path = "../xray-routing" }
